[FIX] sap.ui.unified.Calendar: Layout of the 2-months case is improved
- trigger re-rendering after resize to re-create the month
headers in the case of 2 months
- fixed a misalignment in the second header buttons around the
width of 950px in compact

BCP: 2170117117

--- a/src/sap.ui.unified/src/sap/ui/unified/themes/base/Calendar.less
+++ b/src/sap.ui.unified/src/sap/ui/unified/themes/base/Calendar.less
@@ -718,10 +718,6 @@ html.sapUiMedia-Std-Phone .sapUiCalHeadB0{
 	width: 6.25rem;
 }
 
-.sapUiSizeCompact .sapUiCalMulti .sapUiCalHeadB1,
-.sapUiSizeCompact.sapUiCalMulti .sapUiCalHeadB1,
-.sapUiSizeCompact .sapUiCalMonthInt .sapUiCalHeadB2,
-.sapUiSizeCompact.sapUiCalMonthInt .sapUiCalHeadB2,
 .sapUiSizeCompact .sapUiCalMulti .sapUiCalHeadB3,
 .sapUiSizeCompact.sapUiCalMulti .sapUiCalHeadB3,
 .sapUiSizeCompact .sapUiCalIntLarge .sapUiCalHeadB3,
